--- a/etl/fetch_anilist2.ipynb
+++ b/etl/fetch_anilist2.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "93928751",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/duartedasilva/Desktop/Data Work/Data Projects/manga_anilist_pipeline/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import requests \n",
     "import json \n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "c299360a",
    "metadata": {},
    "outputs": [
@@ -35,7 +44,7 @@
        "'/Users/duartedasilva/Desktop/Data Work/Data Projects/manga_anilist_pipeline'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "7f582077",
    "metadata": {},
    "outputs": [],
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "d4e5a8e3",
    "metadata": {},
    "outputs": [],
@@ -120,7 +129,7 @@
     "\n",
     "per_page = 50 \n",
     "\n",
-    "for page in range(1, 10):\n",
+    "for page in range(1, 25):\n",
     "    variables = {\"page\": page, \"perPage\": per_page}\n",
     "    resp = requests.post(url, json={\"query\": query, \"variables\":variables})\n",
     "\n",
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "f85fe77d",
    "metadata": {},
    "outputs": [
@@ -185,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "450\n"
+      "1200\n"
      ]
     }
    ],
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "fa5dfc2a",
    "metadata": {},
    "outputs": [
@@ -228,16 +237,16 @@
       "9                                Fullmetal Alchemist   \n",
       "\n",
       "                                        title_native format  popularity  \\\n",
-      "0                                              ベルセルク  MANGA      220967   \n",
-      "1                            ジョジョの奇妙な冒険 スティール・ボール・ラン  MANGA       93385   \n",
-      "2                                              バガボンド  MANGA      144337   \n",
-      "3                                          ONE PIECE  MANGA      210786   \n",
-      "4  うみねこのなく頃に散 - Episode 8: Twilight of the Golden...  MANGA       10270   \n",
-      "5                                            MONSTER  MANGA       96881   \n",
-      "6                                          ヴィンランド・サガ  MANGA      125141   \n",
-      "7                                          SLAM DUNK  MANGA       67569   \n",
-      "8                                               宝石の国  MANGA       72756   \n",
-      "9                                             鋼の錬金術師  MANGA       72911   \n",
+      "0                                              ベルセルク  MANGA      221068   \n",
+      "1                            ジョジョの奇妙な冒険 スティール・ボール・ラン  MANGA       93405   \n",
+      "2                                              バガボンド  MANGA      144364   \n",
+      "3                                          ONE PIECE  MANGA      210863   \n",
+      "4  うみねこのなく頃に散 - Episode 8: Twilight of the Golden...  MANGA       10274   \n",
+      "5                                            MONSTER  MANGA       96925   \n",
+      "6                                          ヴィンランド・サガ  MANGA      125169   \n",
+      "7                                          SLAM DUNK  MANGA       67579   \n",
+      "8                                               宝石の国  MANGA       72775   \n",
+      "9                                             鋼の錬金術師  MANGA       72924   \n",
       "\n",
       "   average_score                                             genres  \\\n",
       "0             93  [Action, Adventure, Drama, Fantasy, Horror, Ps...   \n",
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "51b45385",
    "metadata": {},
    "outputs": [],
